[package]
name = "rust_connectivity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.152", features=["derive"] }
smallvec = { version = "1.10.0", features=["serde"] }
serde_json = "1.0.91"
rayon = "1.6.1"
fs-err = "2.9.0"
actix-web = "4.3.0"
env_logger = "0.10.0"
actix-cors = "0.6.4"
typed-index-collections = "3.1.0"
derive_more = "0.99.0"
log = "0.4"
common = { path = "./common" }

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "do_serialisation"
path = "do_serialisation/src/main.rs"

[[bin]]
name = "find_nodes_near_each_other"
path = "find_nodes_near_each_other/src/main.rs"

[[bin]]
name = "walk_cycling_car_batch"
path = "walk_cycling_car_batch/src/main.rs"

[[bin]]
name = "planning_app_public_transport_api"
path = "planning_app_public_transport_api/src/main.rs"

[[bin]]
name = "public_transport_batch"
path = "public_transport_batch/src/main.rs"

[[bin]]
name = "service_change_api"
path = "service_change_api/src/main.rs"

[[bin]]
name = 'read_tests_cloud_run'
path = "read_tests_cloud_run/src/main.rs"
